[package]
name = "production_scanner"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "scanner"
path = "production_scanner.rs"

[dependencies]
once_cell = "1.10.0"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
hex = "0.4.3"
walkdir = "2.5.0"

# Tree-sitter AST Parsing
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-java = "0.20"

# Python Analysis
rustpython-parser = "0.3.0"


# Rust Analysis
syn = { version = "2.0", features = ["full", "visit", "parsing"] }
proc-macro2 = "1.0"
quote = "1.0"

# Utilities
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
