[package]
name = "production_scanner"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "scanner"
path = "production_scanner.rs"

[dependencies]
once_cell = "1.10.0"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = [ "derive" ] }
serde_json = "1.0.117"
sha2 = "0.10.8"
hex = "0.4.3"
walkdir = "2.5.0"
base64 = "0.21.0"
clap = { version = "4.5.4", features = [ "derive" ] }
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-java = "0.20"

[dev-dependencies]
tempfile = "3.8.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
